css/portfoilo.css
/* ... */
.button{
	padding: 20px;
}
button{
	padding: 1rem;
	color: #D4D4D4;
	background-color: #0A7A7E;
	border: none;
	border-radius: 20px;
	display: inline-block;

}
button a{
	color: #D4D4D4;
	text-decoration: none;
	font-size: 1em;
}
button:hover{
	background-color: #0FB1B7;
}
button:visited{
	background-color: #0A7A7E;
}

button:focus{
	background-color: #0A7A7E;
}


.middle{
	width: 200px;
	float: left;
	padding: 5px 15px;
	margin: 0px 5px 5px 50px;}

.side {
	width: 200px;
	padding: 5px 15px;
	float: left;
	margin: 0px 5px 5px 50px;
}

.projects h1{
	border-bottom:#0A7A7E solid 1px;
}
.projects {
	margin: 0px 5px 5px 35px;
float: left;
	width: 500px;
}
.vid{
	margin: 0px 5px 5px 50px;
	float: left;
	height: auto;
	r
}
.projects-1  a{
	text-decoration: none;
	color: #0A7A7E;
}
.projects-1 a:hover{
	color: #11AFA5;
}
.projects-1 a:visted, .projects a:focus{
	color: #11AFA5;
}
.projects {
	margin: 0px 5px 5px 10px;
	width: 80%;
	height: auto;
}

.projects-1 {
	margin: 0px 5px 5px 60px;
	width: 200px;
}
.compress img{
	width: 80%;
	height: auto;
	 margin: 10%;
}
.hm{
	width: 100%;
	height: auto;
}

#video-background {
	height: 100px;
	right: 0;
  bottom: -120px;
  min-width: 30%;
  min-height: 50%;
  width: 100%;
  height: 5%;
  z-index: 10;

}
#video-background video{

}
.overlay-desc h1{
	text-align: center;
	font-family: adorn-smooth-condensed-sans, sans-serif;
	font-style: normal;
	font-weight: 400;
	font-size: 9vw;
	color: #D4D4D4;
}
.overlay-desc {
  background:
	rgba(0, 0, 0, 0.70);
  position: absolute;
  top: 0; right: 0; bottom: 0; left: 0;
  display: flex;
  align-items: center;
  justify-content: center;
}
.motor{
	position: relative;
}
.motor video {
  vertical-align: middle;
  width: 100%;
 overflow: hidden;
}

@-webkit-keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

@keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}
	  @media only screen and (max-width: 300px){
		  .enter{padding 25%;}
	  }
/* for mobile */
@media only screen and (max-width:700px) {
	.winter{
		text-align: center;}

		.winter h1 {
			font-size: 2em;
			letter-spacing: 4px;
		}

	}
}
/* On smaller screens, decrease text size */
@media only screen and (max-width: 300px) {
  .prev, .next,.text {font-size: 11px}
	.hm{
		float: right;
	}
	.lala{
		float: right;
		align-items: center;
	}
}
@media screen and (max-height: 450px)
.sidenav {padding-top: 15px;
.sidenav a {font-size: 18px;}

